[package]
name = "potential"
version = "0.1.0"
edition = "2021"

[lib]
name = "potential"
crate-type = ["staticlib"]

[profile.release]
lto = "yes"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[build-dependencies]
cxx-build = "1.0"
